--- a/3rdlesson.html
+++ b/3rdlesson.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>various buttons</title>
     <link rel="stylesheet" href="3rdlesson.css" />
 </head>
 <body>
